app/styles/components/nav-responsive.scss
.nav-responsive {
  z-index: 1;
  width: 100%;
  transition: all .5s;
  position: fixed;
  background: #FFF;
  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);

  .nav-inline .nav-element a {
    color: black;

    &.active {
      border-bottom: 2px solid black;
    }
  }
}

@media (max-width: $screen-xs-max) {
  .nav-responsive {
    text-align: center;
    background: rgba(255, 255, 255, 0);
    transition: top .3s,opacity .3s;
    height: 50px;

    .container {
      padding-top: 15px;
      padding-bottom: 15px;
      background: $purple;
      transition: height .5s;
      height: 50px;
    }

    .title {
      height: 20%;
      transition: all .5s;
      font-size: 1.2em;
      cursor: pointer;
      color: white;
      font-family: MyriadPro;
      font-weight: bold;
      text-transform: uppercase;
    }

    svg {
      fill: $purple;
    }

    &.open {
      height: 100%;
      background: rgba(255, 255, 255, 0.8);

      .title {
        font-size: 1.8em;
      }

      .container {
        height: 60%;
      }

      .nav-inline {
        display: block;
      }
    }

    .nav-inline {
      height: 80%;
      display: none;

      .nav-element {
        display: block;
        width: 100%;
        height: 20%;
        padding: 0;

        a {
          color: white;
          font-family: MyriadPro;
          font-weight: bold;
          text-transform: uppercase;

          &.active {
            border-bottom: 2px solid white;
          }
        }
      }
    }
  }
}

